2009-06-24  Nick Garnett  <nickg@ecoscentric.com>

	* src/malloc.cxx (cyg_memalloc_heap_reinit): Added this function
	to reinitialize the heap to a new arena. This should be done
	during system startup and is present mainly for the use of
	RedBoot.
	Permit configurations with multi-region heaps to build.
	[Imported from eCosPro sources, mainly to support use of
	filesystems in RedBoot].
	
2009-02-03  Simon Kallweit  <simon.kallweit@intefo.ch>

	* include/mvarimpl.inl:
	* include/sepmetaimpl.inl:
	Fixed a few compiler warnings.

2009-01-09  John Dallaway  <john@dallaway.org.uk>

	* cdl/memalloc.cdl: Invoke tclsh explicitly to avoid the need for
	execute permission on heapgen.tcl.

2009-01-08  John Dallaway  <john@dallaway.org.uk>

	* src/heapgen.tcl: Specify script interpreter via /usr/bin/env.
	* cdl/memalloc.cdl: Simplify heaps.cxx make rule - cygtclsh80 is
	no-longer supported.

2008-12-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/dlmalloc.cxx (MALLOC_COPY): Reinstate fix of 2008-01-06
	(reverting change of 2008-11-03).
	* cdl/memalloc.cdl (CYGIMP_MEMALLOC_ALLOCATOR_DLMALLOC_USE_MEMCPY):
	Make explicit dependency on isoinfra functionality block which
	includes memmove(), and set default_value accordingly.

2008-11-03  Nick Garnett  <nickg@ecoscentric.com>

	* src/dlmalloc.cxx (MALLOC_COPY): Replace memmove() with memcpy().

	* include/dlmallocimpl.hxx (class Cyg_Mempool_dlmalloc_Implementation):
	Remove spurious typedef in definition of struct malloc_chunk.

2008-01-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/dlmalloc.cxx (MALLOC_COPY): 
	* cdl/memalloc.cdl: Use memmove instead of memcpy which can go
	wrong in realloc() when the new and old block overlaps.
	CYGIMP_MEMALLOC_ALLOCATOR_DLMALLOC_USE_MEMCPY has been retained
	instead of being renamed to ..._MEMMOVE to help backward
	compatibility with older configurations. Thanks to Oyvind Harboe
	and Dave Lawrence.

2007-11-05  Oyvind Harboe <oyvind.harboe@zylin.com>
	