@@ -67,8 +67,10 @@ proc dputs { args } {
 }
 
 proc tcl_path { posix_path } {
-    global tcl_platform
-    if { $tcl_platform(platform) == "windows" } {
+    # Use the HOST setting from the toplevel makefile in preference to
+    # tcl_platform() since we have more control over the former than the
+    # latter.
+    if { [info exists ::env(HOST)] && [string equal $::env(HOST) "CYGWIN"] } {
         return [ exec cygpath -w $posix_path ]
     } else {
         return $posix_path
